--- a/9-forkify/starter/package.json
+++ b/9-forkify/starter/package.json
@@ -15,5 +15,8 @@
     "webpack": "^4.16.5",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.5"
+  },
+  "dependencies": {
+    "axios": "^0.18.0"
   }
 }
